v0.5.4    Fri, 04 May 2018 20:43:11 +0900
  - Set default config file in docker image

v0.5.3    Fri, 04 May 2018 14:46:08 +0900
  - travis ci 에서 docker image 를 build

v0.5.2    Wed, 14 Mar 2018 23:45:14 +0900
  - 의류 등록 오류를 제대로 표시하도록 수정 (#106)

v0.5.1    Thu, 14 Dec 2017 13:18:27 +0900
  - 신청서에 타이 또는 벨트의 수량을 입력할 수 있도록 함 (#102)
  - 기증품목 안내 변경 (#100)

v0.5.0    Thu, 02 Nov 2017 15:43:55 +0900
  - 운영시간안내 수정
  - 업로드된 이미지를 container 간 공유를 위해 /tmp 대신에 ./db 를 사용
  - jobqueue 에서 avatar 에 업로드 하고 나면 tempfile 을 삭제
  - smtp 포트를 설정가능 하게 변경
  - dockerize

v0.4.10   Thu, 04 May 2017 16:32:31 +0900
  - 재활용(비전) 상태를 추가할 수 있도록 하고 현황을 나타냄 (#93)
  - 목둘레는 x2 버튼에 영향받지 않도록 함 (#94)

v0.4.9    Thu, 20 Apr 2017 14:39:06 +0900
  - 성별을 신청서의 필수 값으로 지정
  - 제안된 수선 치수를 선택해서 변경할 수 있도록 함 (#87)

v0.4.8    Thu, 16 Mar 2017 17:56:16 +0900
  - 의류등록 카테고리를 선택하면 태그가 검색되지 않는 버그 수정 (#86)

v0.4.7    Tue, 14 Mar 2017 13:05:28 +0900
  - 수선장소에 '라이벌' 추가 (#80)
  - 의류등록할때 엔터키를 누르면 옷캔 대신에 사용가능한 의류로 추가되도록 함 (#91)

v0.4.6    Tue, 07 Mar 2017 16:12:52 +0900
  - requires OpenCloset::Common v0.0.14
  - `둘레 x 2` 버튼에서 밑단을 제외하고 소숫점을 지원 (#80)

v0.4.5    Mon, 06 Mar 2017 11:29:28 +0900
  - 둘레의 크기를 2배로 늘여주는 버튼을 추가 (#80)
  - footer 의 대표번호 변경 (#75)
  - 기증현황 sms 내용 수정 (#88)

v0.4.4    Fri, 24 Feb 2017 04:34:21 +0900
  - 반송중 -> 반송완료, 배송완료 -> 반송완료 문자를 보내지 않음 (#85)
  - 의류등록 태그검색의 기능 강화 (#86)

v0.4.3    Tue, 21 Feb 2017 18:35:40 +0900
  - 의류 분류 절차 및 재기증 동의 내용 수정 (#83)

v0.4.2    Thu, 26 Jan 2017 17:09:00 +0900
  - 중복되는 의류코드를 사용했을때에 에러 화면을 나타냄 (#81)

v0.4.1    Thu, 12 Jan 2017 15:48:31 +0900
  - 의류태그 관리화면의 검색어 입력란에 자동 포커싱 (#74)
  - 운송장 파일명을 D-day 로 변경 (#77)
  - 10자리(010-xxxx-xxx) 전화번호도 허용함 (#76)

v0.4.0    Mon, 09 Jan 2017 17:33:21 +0900
  - 의류 태그관리에 unckeck all 버튼 추가 (#71)
  - 태그관리 의류목록에 넘버링
  - 태그관리 버튼모양 수정
  - 분실, 폐기되는 의류의 태그를 삭제 (#72)
  - 분실, 폐기되는 의류의 셋트의류를 해제 (#73)
  - 수선의류 목록에 ID 를 명확하게 표시 (#64)
  - 의류수선목록에 reset 버튼 추가 (#69)
  - 수선장소 목록의 변경 (#70)
  - `배송완료 -> 반송완료` 일때에 `반송중 -> 반송완료` 와 같은 문자메세지를 보냄 (#61)